--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_redux: ^0.10.0
   intl: ^0.18.1
+  path_provider: ^2.1.2
   puppeteer: ^3.8.0
   redux: ^5.0.0
 
